[package]
name = "cryptonight-rs"
description = "Cryptonight-rs is a Rust wrapper around Cryptonight hash function from Monero."
version = "0.1.0"
authors = ["Hycon team"]
homepage = "https://github.com/arigatodl/cryptonight-rs/"
repository = "https://github.com/arigatodl/cryptonight-rs/"
keywords = [ "Crypto", "Cryptonight" ]
readme = "README.md"
build = "build.rs"
license = "MIT License"

[lib]
name = "cryptonight"

[build-dependencies]
cc = "^1.0"

[dependencies]
libc = "^0.2"
rustc-serialize = "^0.3"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "cryptonight"
harness = false